RESOLVED FIXED203765
REGRESSION(r248696): Element Click on Mac is adding an extra page topContentInsets to y-coordinate
https://bugs.webkit.org/show_bug.cgi?id=203765
Summary REGRESSION(r248696): Element Click on Mac is adding an extra page topContentI...
Blaze Burg
Reported 2019-11-01 14:55:08 PDT
.
Attachments
Patch (1.81 KB, patch)
2019-11-01 15:03 PDT, Blaze Burg
hi: review+
Blaze Burg
Comment 1 2019-11-01 14:55:22 PDT
Blaze Burg
Comment 2 2019-11-01 15:03:10 PDT
Devin Rousso
Comment 3 2019-11-01 15:05:37 PDT
Comment on attachment 382635 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=382635&action=review r=me, an all negative diff I love it =D > Source/WebKit/ChangeLog:11 > + The topContentInsets is now accounted for by rootViewToWindow(), so don't add it in manually. Shouldn't this just be "The topContentInset is"? Also, was this something that changed recently (the "now" makes it seem like this wasn't the case before)? If so, do you know what revision? If not, please remove the "now".
Blaze Burg
Comment 4 2019-11-01 15:09:15 PDT
(In reply to Devin Rousso from comment #3) > Comment on attachment 382635 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=382635&action=review > > r=me, an all negative diff I love it =D > > > Source/WebKit/ChangeLog:11 > > + The topContentInsets is now accounted for by rootViewToWindow(), so don't add it in manually. > > Shouldn't this just be "The topContentInset is"? Yes. > > Also, was this something that changed recently (the "now" makes it seem like > this wasn't the case before)? If so, do you know what revision? If not, > please remove the "now". This method was reworked this spring to work in terms of viewport coordinates. I'll just drop 'now' since there were many relevant commits in this chain of regressions.
Blaze Burg
Comment 5 2019-11-01 15:16:36 PDT
Note You need to log in before you can comment on or make changes to this bug.