REGRESSION(r248696): Element Click on Mac is adding an extra page topContentInsets to y-coordinate https://bugs.webkit.org/show_bug.cgi?id=203765 <rdar://problem/56014369>

Reviewed by Devin Rousso.

* UIProcess/Automation/mac/WebAutomationSessionMac.mm:
(WebKit::WebAutomationSession::platformSimulateMouseInteraction):
The topContentInsets is accounted for by rootViewToWindow(), so don't add it in manually.

Canonical link: https://commits.webkit.org/217116@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251948 268f45cc-cd09-0410-ab3c-d52691b4dbfc